--- a/main.tex
+++ b/main.tex
@@ -77,9 +77,9 @@ analysis problem.}
 \begin{itemize}
 \item{\textbf{Searching for Digital library and api:} On suggestion, i begun to search for a digital library that would contain all of the translations i wanted archived. Extended research has come up with no such repositories like that of the Perseus Digital Library. With that being said, i have found at least 3 public domain translations in various places and am confident with at least finding 5.}
 
-\item{It appears likely that i will need to download these translations as text documents or turn them into text documents. From this i will need to convert them into a format in which i can tag the chapters and make them compatible with running a shell code}
+\item{It appears likely that i will need to download these translations as text documents or turn them into text documents. From this I will need to convert them into a format in which I can tag the chapters and make them compatible with running a shell code}
 
-\item{This will essentially framing the project as finding my translations in the first step, concerting them into a usable format in the second step and finally writing a shell script to show the relevant chapters of each of the translations side by side as i require them.}
+\item{This will essentially make the project comprise 3 parts. Finding my translations in the first step, converting them into a usable format in the second step and finally writing a shell script to show the relevant chapters of each of the translations side by side as I require them.}
 
 
 
@@ -94,9 +94,9 @@ analysis problem.}
 
 \begin{itemize}
 
-\item{I believe that the findings of this elaborated research into the issue have not only framed the problem correctly but have also created a potential proof of concept project that is challenging enough for my skill level but also contains enough steps so that i can be adequately challenged.}
+\item{I believe that the findings of this elaborated research into the issue have not only framed the problem correctly but have also created a potential proof of concept project that is challenging enough for my skill level.}
 
-\item{After converting the texts, putting them in a directory and running a shell script on them that i have written, the original processed will be changed to simply me typing one line of code into the shell and pulling up the information i need alongside each other so i can see the different translations. This tool will most likely save me hours.}
+\item{After converting the texts, putting them in a directory and running a shell script on them that I have written, the original processed will be changed to simply me typing one line of code into the shell and pulling up the information I need alongside each other so I can see the different translations. This tool will most likely save me hours.}
 
 
 
