Small change, added ':' completed document for submission

--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@ analysis problem.}
 
 \item{\textbf{Textual Analysis:} The initial elaboration of the project included textual analysis software. Tools such as Nvivo and Voyant were listed. After the testing of these tools initially, it was discovered that they could not do what i required them to do for this project. As such, i needed to readjust.}
 
-\item{\textbf{The Unix Shell} Upon learning about the shell and seeking consultation, the power of the shell came up as a tool that could be utilised as a way to comb a database of texts and pull up the relevant chapters. However, this requires files of a particular nature that are tagged with titles.}
+\item{\textbf{The Unix Shell:} Upon learning about the shell and seeking consultation, the power of the shell came up as a tool that could be utilised as a way to comb a database of texts and pull up the relevant chapters. However, this requires files of a particular nature that are tagged with titles.}
 
 \end{itemize}
 
